added project tab

--- a/my-erp-ionic/src/app/home/home.page.html
+++ b/my-erp-ionic/src/app/home/home.page.html
@@ -1,15 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Projects
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Projects</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  Home!!!
 </ion-content>
