--- a/my-erp-ionic/src/app/tabs/tabs.page.html
+++ b/my-erp-ionic/src/app/tabs/tabs.page.html
@@ -4,5 +4,9 @@
       <ion-icon name="home"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="project">
+      <ion-icon name="trending-up-outline"></ion-icon>
+      <ion-label>Projects</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
