--- a/my-erp-ionic/src/app/project/components/project-detail/project-detail.component.html
+++ b/my-erp-ionic/src/app/project/components/project-detail/project-detail.component.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button color="primary" text=""></ion-back-button>
+    </ion-buttons>
     <ion-title>Project detail</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,14 +15,14 @@
   >
     <ion-item>
       <ion-label position="floating">Name</ion-label>
-      <ion-input formControlName="name" place="Type here..."></ion-input>
+      <ion-input formControlName="name" placeholder="Type here..."></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="floating">Manager</ion-label>
       <ion-input
         formControlName="projectManager"
-        place="Type here..."
+        placeholder="Type here..."
       ></ion-input>
     </ion-item>
 
