fix for datepicker

--- a/my-erp-ionic/src/app/project/components/project-tile/project-tile.component.html
+++ b/my-erp-ionic/src/app/project/components/project-tile/project-tile.component.html
@@ -1,7 +1,7 @@
 <ion-item routerLink="/project/{{ project.id }}">
   <ion-avatar slot="start">
     <img
-      src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
+      src="https://clipartart.com/images/default-profile-picture-clipart-3.jpg"
     />
   </ion-avatar>
   <ion-label>
