--- a/my-erp-ionic/src/app/home/home.page.html
+++ b/my-erp-ionic/src/app/home/home.page.html
@@ -1,5 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="end"
+      ><ion-button (click)="logout()"
+        ><ion-icon name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>
       Home
     </ion-title>
@@ -7,9 +12,9 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <p *ngIf="auth.loading" class="ion-text-center">Loading...</p>
+  Home Content
+  <!-- <p *ngIf="auth.loading" class="ion-text-center">Loading...</p>
   <ng-template [ngIf]="!auth.loading">
-    <!-- Not loading, not logged in: show login button -->
     <ion-button
       button
       expand="block"
@@ -18,7 +23,6 @@
       (click)="auth.login()"
       >Log In</ion-button
     >
-    <!-- Not loading, logged in: show profile and logout button -->
     <ng-template [ngIf]="auth.loggedIn">
       <ion-card *ngIf="auth.user">
         <img [src]="auth.user.picture" />
@@ -31,5 +35,5 @@
         >Log Out</ion-button
       >
     </ng-template>
-  </ng-template>
+  </ng-template> -->
 </ion-content>
