--- a/my-erp-ionic/src/app/home/home.page.html
+++ b/my-erp-ionic/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="end"
-      ><ion-button (click)="logout()"
+      ><ion-button *ngIf="auth.loggedIn" (click)="logout()"
         ><ion-icon name="log-out-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -12,28 +12,5 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  Home Content
-  <!-- <p *ngIf="auth.loading" class="ion-text-center">Loading...</p>
-  <ng-template [ngIf]="!auth.loading">
-    <ion-button
-      button
-      expand="block"
-      color="primary"
-      *ngIf="!auth.loggedIn"
-      (click)="auth.login()"
-      >Log In</ion-button
-    >
-    <ng-template [ngIf]="auth.loggedIn">
-      <ion-card *ngIf="auth.user">
-        <img [src]="auth.user.picture" />
-        <ion-card-content>
-          <ion-card-title>{{ auth.user.name }}</ion-card-title>
-          <pre>{{ auth.user | json }}</pre>
-        </ion-card-content>
-      </ion-card>
-      <ion-button button expand="block" color="danger" (click)="auth.logout()"
-        >Log Out</ion-button
-      >
-    </ng-template>
-  </ng-template> -->
+  Home Content...
 </ion-content>
